# src/controllers/auth.js
@@ -1,4 +1,5 @@
 import { THIRTY_DAYS } from '../constants/index.js';
+import { generateAuthUrl } from '../utils/googleOAuth2.js';
 import {
   registerUser,
   loginUser,
@@ -6,6 +7,7 @@ import {
   refreshUsersSession,
   requestResetToken,
   resetPassword,
+  loginOrSignupWithGoogle,
 } from '../services/auth.js';
 
 //
@@ -102,5 +104,33 @@ export const resetPasswordController = async (req, res) => {
     status: 200,
     message: 'Password has been successfully reset!',
     data: {},
+  });
+};
+
+//
+
+export const getGoogleOAuthUrlController = async (req, res) => {
+  const url = generateAuthUrl();
+  res.json({
+    status: 200,
+    message: 'Successfully get Google OAuth url!',
+    data: {
+      oauth_url: url,
+    },
+  });
+};
+
+//
+
+export const loginWithGoogleController = async (req, res) => {
+  const session = await loginOrSignupWithGoogle(req.body.code);
+  setupSession(res, session);
+
+  res.json({
+    status: 200,
+    message: 'Successfully logged in via Google OAuth!',
+    data: {
+      accessToken: session.accessToken,
+    },
   });
 };
